Prevent white-space wrapping in checkbox labels

--- a/web/style.css
+++ b/web/style.css
@@ -181,6 +181,7 @@ aside#filter-options label.checkbox-label {
     margin: 2px 0;
     line-height: 18px;
     font-size: 0.725rem;
+    white-space: nowrap;
 }
 
 aside#filter-options select {
